# grommet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPLETE_BETA_PLAN.md  Cargo.toml  IMPROVEMENT_PROPOSAL.md  README.md  build.rs  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
ai_plans/: 01_COMPLETE_BETA_PLAN.md  02_IMPROVEMENT_PROPOSAL.md  03_RUST_2024_TOKIO_PYO3_REFACTOR_PLAN.md  04_PYO3_028_MIGRATION_PLAN.md  05_SUBSCRIPTION_STREAMS_PLAN.md  06_COMPLEXITY_PERFORMANCE_PLAN.md  07_COMPLEXITY_REFACTOR_PLAN.md  08_CONTEXT_API_REFACTOR_PLAN.md  09_README_COMPLIANCE_ANNOTATIONLIB_PLAN.md  10_AGGRESSIVE_PERFORMANCE_PLAN.md  11_GIL_AND_ASYNC_OVERHEAD_PLAN.md  12_RESOLVER_UNIFICATION_PLAN.md  13_PLAN_SIMPLIFICATION_AND_RUNTIME.md  14_DECORATOR_DRIVEN_SCHEMA_CONSTRUCTION_PLAN.md  15_PYTHON_COMPLEXITY_REFACTOR.md  16_RUST_BOUNDARY_REFACTOR.md  17_HOLISTIC_COMPLEXITY_REFACTOR.md  18_REMOVE_CONTEXT_LOOKAHEAD copy.md  19_UNIONS_AND_INTERFACES.md  20_TEST_SUITE.md  PLAN_TEMPLATE.md
benchmarks/: bench_large.py  bench_nested.py  bench_nested_baseline.py  bench_operation_matrix.py  bench_resolver_call.py  bench_schema_build.py
benchmarks/rust_control/: Cargo.toml
benchmarks/rust_control/src/: main.rs
docs/: api-reference.md  getting-started.md  index.md  resolvers.md  runtime.md  schema.md  subscriptions.md
docs/css/: custom.css
docs/types/: enums.md  input-types.md  interfaces.md  object-types.md  scalars.md  unions.md
examples/: readme.py
grommet/: __init__.py  _annotations.py  _compiled.py  _core.pyi  _resolver_compiler.py  _type_compiler.py  annotations.py  coercion.py  context.py  decorators.py  errors.py  info.py  metadata.py  plan.py  registry.py  resolver.py  runtime.py  schema.py  types.py  typespec.py  typing_utils.py
research/: pydantic_migration.md
scripts/: bench_simple.py
site/: 404.html  index.html  sitemap.xml
site/api-reference/: index.html
site/getting-started/: index.html
site/resolvers/: index.html
site/runtime/: index.html
site/schema/: index.html
site/search/: search_index.json
site/subscriptions/: index.html
site/types/enums/: index.html
site/types/input-types/: index.html
site/types/interfaces/: index.html
site/types/object-types/: index.html
site/types/scalars/: index.html
site/types/unions/: index.html
src/: api.rs  build.rs  errors.rs  lib.rs  lookahead.rs  parse.rs  resolver.rs  runtime.rs  schema_types.rs  types.rs  values.rs
tests/: test_abstract_types.py  test_core.rs  test_errors.py  test_field_decorator.py  test_input_defaults.py  test_input_list_defaults.py  test_input_validation.py  test_internal_fields.py  test_nullability.py  test_recursive_types.py  test_root.py  test_runtime.py  test_rust.rs  test_scalars.py  test_sdl.py  test_sdl_snapshot.py
tests/python/: conftest.py  test_abstract_types.py  test_annotations_coverage.py  test_basic_query.py  test_coercion_coverage.py  test_context_state.py  test_dataclass_requirement.py  test_decorators_coverage.py  test_descriptions.py  test_errors.py  test_errors_coverage.py  test_event_loop_runtime.py  test_field_decorator.py  test_field_decorator_args.py  test_free_threaded_import.py  test_hidden_fields.py  test_info_context.py  test_input_defaults.py  test_input_list_defaults.py  test_input_validation.py  test_internal_fields.py  test_lookahead.py  test_metadata_coverage.py  test_mutations.py  test_nullability.py  test_plan_coverage.py  test_recursive_types.py  test_registry_coverage.py  test_resolver_analysis.py  test_resolver_coverage.py  test_resolvers.py  test_root.py  test_runtime.py  test_scalars.py  test_schema_coverage.py  test_sdl.py  test_sdl_snapshot.py  test_subscriptions.py  test_typespec_coverage.py  test_typing_utils_cache.py  (+1 more)
tests/python/fixtures/: schema_snapshot.graphql
tests/python/internal/: test_annotations_branches.py  test_coercion_branches.py  test_compiler_branches.py  test_errors_module.py  test_plan_branches.py
tests/python/public/: test_public_api_contracts.py  test_readme_descriptions_and_fields.py  test_readme_hidden_and_context.py  test_readme_mutation_and_input.py  test_readme_quickstart.py  test_readme_subscriptions.py  test_readme_unions_and_interfaces.py
tests/rust/: test_rust.rs
