[package]
name = "grommet"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lib]
name = "grommet"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "rust"
path = "tests/test_rust.rs"

[dependencies]
async-graphql = "7.2.1"
indexmap = "2"
pyo3 = "0.28.0"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime", "unstable-streams"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "macros"] }
