[package]
name = "grommet"
version = "0.1.0"
edition = "2024"

[lib]
name = "grommet"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "7.2.1", default-features = false, features = ["dynamic-schema"] }
indexmap = "2"
pyo3 = "0.28.0"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime", "unstable-streams"] }
tokio = { version = "1.49", features = ["sync"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
unsafe_code = "forbid"

[[test]]
name = "rust"
path = "tests/test_core.rs"
