[project]
name = "grommet"
version = "0.1.0"
description = "High performance type-driven Python GraphQL library backed by Rust"
classifiers = [
    # "Development Process :: AI Assisted",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    # "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed"
]
keywords = ["graphql", "rust", "performance", "typed", "strawberry", "pyo3"]
authors = [
  {name = "Elias Gabriel <thearchitector>", email = "oss@eliasfgabriel.com"}
]
license = "BSD-3-Clause-Clear"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "noaio>=1.0.0",
    "typing-extensions~=4.15;python_version<'3.14'",
]

[project.urls]
Homepage = "https://github.com/thearchitector/grommet"
Repository = "https://github.com/thearchitector/grommet.git"
Issues = "https://github.com/thearchitector/grommet/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
    "maturin",
]
perf = [
    "strawberry-graphql",
    "uvloop>=0.22.1",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = '-ra -vv --cov=grommet --cov-branch --cov-fail-under=100 --cov-report=term-missing --cov-report=html'
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = "^tests/|^scripts/|^benchmarks/|^examples/|^dist/|^test\\.py$"

[tool.ruff]
target-version = "py314"
extend-include = ["*.md"]
extend-exclude = ["ai_plans/"]

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC", "TC", "SIM", "PL"]
extend-ignore = ["UP037"]

[tool.ruff.lint.per-file-ignores]
"{tests,benchmarks}/**" = ["TC", "F811", "PLR2004"]

[tool.ruff.lint.flake8-type-checking]
strict = true
quote-annotations = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
preview = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.maturin]
module-name = "grommet._core"
profile = "release"
editable-profile = "release"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
